--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>June</title>
 </head>
 <body>
-    
+    <h1>My Web site</h1>
+    <p>i am trying to be a developer</p>
 </body>
 </html>
