--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </style>
 </head>
 <body>
+    <img src="Amaira.jpg" alt="">
     <h1>My Web site</h1>
     <h2>internationals</h2>
     <p>i am trying to be a developer</p>
